2014-09-15  Per Bothner  <per@bothner.com>

	* Shell.java (run): If parse or rewrite error, pop the new
	ModuleExp to clear semi-processed declarations.

	* lang/SyntaxPattern.java (printSyntaxPatternMatch):  New static flag.
	(match): Maybe print log information.
	* repl.java: Maybe set printSyntaxPatternMatch.

	* lang/SyntaxPattern.java (fileLine): New field.
	(<init>): Set fileLine.
	(writeExternal, readExternal): Write/set fileLine.
	(match): Use fileLine.
	(toString): New method.
	* lang/Pattern.java (print): New default method.

2014-09-07  Per Bothner  <per@bothner.com>

	* lang/Translator.java (pushPositionOf): Generalize to SourceLocator.

	* standard/Scheme.java (initScheme): Renamed '5syntax-error'
	to 'syntax-error', which is in r7rs.
	* standard/syntax_error.java: updated.

2014-09-05  Per Bothner  <per@bothner.com>

	* lang/SyntaxTemplate.java (convert_template): Convert literal
	PairWithPosition to plain Pair, to allow setting line number in
	Macro.expand.
	* lang/SyntaxTemplate.java (convert_template) Don't wrap constands
	with a SyntaxForm.

	* standard/syntax_error.java (rewrite): Tweak formatting to be
	more take the Scheme error routine.

2014-09-04  Per Bothner  <per@bothner.com>

	* standard/Scheme.java (initScheme): Rename syntax-error to
	report-syntax-error.

2014-09-03  Per Bothner  <per@bothner.com>

	* lang/SyntaxPattern.java: Instead using literal_identifiers[0]
	for a "name" for output, use getSymbol().  Set the symbol from the
	currentMacroDefinition, rather than from the head of a syntax-pattern
	- which is often "_" and thus useless anyway.

2014-09-02  Per Bothner  <per@bothner.com>

	* lang/SyntaxPattern.java: Add support for underscore meaning
	"match and ignore anything".
	* lang/SyntaxRules.java (<init>): Don't set literal_identifiers[0] -
	there is no need and it confuses things.

	Add R7RS functionality for ellipsis in syntax-rules.
	* standard/syntax_rules.java (rewriteForm): Check for alternative